[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqsafe-agent-pay"
version = "0.1.0"
description = "PQSafe AgentPay Python SDK — post-quantum safe payments for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "PQSafe", email = "dev@pqsafe.xyz" }]
keywords = [
    "pqsafe",
    "payments",
    "ai-agents",
    "post-quantum",
    "ml-dsa",
    "langchain",
    "crewai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pqcrypto>=0.4.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "requests-mock>=1.11",
]

[project.urls]
Homepage = "https://pqsafe.xyz"
Documentation = "https://pqsafe.xyz/handbook"
Repository = "https://github.com/PQSafe/pqsafe"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
